src/pages/home/home.scss
@import "../../styles/colors";
@import "../../styles/fonts";

.home {
  min-height: 100vh;

  .left-container {
    background-color: $dark;
    width: 45%;

    .left-container-items {
      gap: 180px !important;

      .logo {
        max-width: 275px;
        max-height: 80px;
      }

      h2 {
        font-size: 64px;
        font-weight: $font-weight-bold;
        line-height: 98px;
        max-width: 55%;
      }
    }
  }

  .right-container {
    width: 55%;

    .right-container-content {
      height: 100%;

      .right-container-title {
        h2 {
          font-size: 40px;
          font-weight: $font-weight-semibold;
        }
      }

      .right-container-body {
        button {
          border-radius: 40px !important;
          font-size: 25px;
          font-weight: $font-weight-regular;
          height: 65px;
        }

        .btn-outline-dark {
          border-color: $dark;
          color: $dark;
        }

        .btn-outline-dark:hover {
          background-color: $dark;
          color: #fff;
        }

        .btn-outline-primary {
          border-color: $orange;
          color: $orange;
        }

        .btn-outline-primary:focus,
        .btn-outline-dark:focus {
          box-shadow: none;
        }

        .btn-outline-primary:hover {
          background-color: $orange;
          color: #fff;
        }
      }
    }
  }

  @media (max-width: 1438.98px) {
    .left-container {
      .left-container-items {
        gap: 100px !important;

        h2 {
          font-size: 40px;
          font-weight: $font-weight-bold;
          line-height: 60px;
          width: 55%;
        }
      }
    }

    .right-container {
      .right-container-title {
        h2 {
          font-size: 35px !important;
          font-weight: $font-weight-semibold;
        }
      }
      .right-container-body {
        button {
          border-radius: 40px !important;
          font-size: 23px !important;
          font-weight: $font-weight-regular;
        }
      }
    }
  }

  @media (max-width: 767.98px) {
    .left-container {
      .left-container-items {
        gap: 50 !important;

        h2 {
          font-size: 22px;
          font-weight: $font-weight-bold;
          line-height: 60px;
          width: 55%;
        }
      }
    }

    .right-container {
      .right-container-title {
        h2 {
          font-size: 30px !important;
          font-weight: $font-weight-semibold;
        }
      }
      .right-container-body {
        button {
          border-radius: 40px !important;
          font-size: 19px !important;
          font-weight: $font-weight-regular;
        }
      }
    }
  }
  
}


@media (max-width: 991.98px) {
  .home {
    flex-direction: column !important;
    width: 100% !important;
    height: 100% !important;
    margin-left: 0;
    padding-left: 0;
    .left-container {
      height: 35rem;
      width: 100%;
      justify-content: center !important; 
      .left-container-items { 
        gap: 80px !important;
        align-items: center;
        .logo {
          margin-top: 20px;
        }

        h2 {
          text-align: center;
          font-size: 40px;
          font-weight: $font-weight-bold;
          line-height: 58px;
          max-width: 70%;
        }
      }
    }
    
    .right-container {
      width: 55%;
      height: 20rem;
      .right-container-content {
        .right-container-title {
          h2 {
            font-size: 32px !important;
            letter-spacing: 2px;
          }
        }

        .right-container-body {
          button {
            border-radius: 40px !important;
            font-size: 24px !important;
            align-self: center;
            height: 64px;
            width: 400px;
          }
        }
      }
    }
  }
}

@media (max-width: 575.98px) {
  .home {
    flex-direction: column !important;
    width: 100% !important;
    height: 100% !important;
    .left-container {
      height: 20rem;
      width: 100%;
      .left-container-items {
        gap: 40px !important;
        .logo {
          margin-right: 100px;
          margin-top: 20px;
        }

        h2 {
          font-size: 28px;
          font-weight: $font-weight-bold;
          line-height: 50px;
          max-width: 70%;
        }
      }
    }

    .right-container {
      width: 55%;
      height: 20rem;
      .right-container-content {
        .right-container-title {
          h2 {
            font-size: 17px !important;
          }
        }

        .right-container-body {
          button {
            border-radius: 40px !important;
            font-size: 16px !important;
            height: 47px;
            width: 250px;
          }
        }
      }
    }
  }
}

